--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+	line-height: 100%;
 }
 ol, ul {
 	list-style: none;
@@ -56,18 +56,16 @@ html, body {
 
 /*main styles*/
 
-html {
-	background: url("beach - red.jpg"), url("penguins - blue.jpg");
-    background-attachment: fixed;
-	background-position: left top, right top;
-	background-repeat: no-repeat;
-	background-size: 50% 100%;
-}
-
 body {
 	font-family: 'Quicksand', sans-serif;
 	font-size: 20px;
 	letter-spacing: -2px;
+		background: url("question.jpg");
+    background-attachment: fixed;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+
 }
 
 h1 {
@@ -88,26 +86,53 @@ textarea:focus, input:focus{
     outline: 0;
 }
 
-#hot, #cold {
+.gamescreen {
+	background: url("beach - red.jpg"), url("penguins - blue.jpg");
+    background-attachment: fixed;
+	background-position: left top, right top;
+	background-repeat: no-repeat;
+	background-size: 50% 100%;
+}
+
+.winnerscreen {
+	background: url("winner.jpg");
+	background-attachment: fixed;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.winnertext { 
+	background-color: white;
+	color: black;
+	display: none;
+	margin: 10em auto 0 auto;
+	padding: 100px 0;
+	text-align: center;
+	white-space: normal;
+	width: 100%;
+	word-spacing: 6px;
+}
+
+.hot, .cold {
 	display: inline-block;
 	float: left;
 	letter-spacing: -3px;
-	margin: 1.5em 0;
+	margin: 3em 0 10em 0;
 	width: 50%;
 }
-#hot {
+.hot {
 	color: darkred;
 }
-#cold {
+.cold {
 	color: darkblue;
 }
 
-#guessfield {
+.guess {
 	margin: 0 auto;
 	width: 100%;
 }
-
-#guessfield input[type="text"]{ 
+#guessinput[type="text"]{ 
 	background-color: white;
 	border: 2px solid antiquewhite;
 	color: dimgray;
@@ -116,14 +141,13 @@ textarea:focus, input:focus{
 	font-size: 3.25em;
 	font-style: italic;
 	letter-spacing: -2px;
-	margin: 1.5em auto;
+	margin: 0 auto;
 	padding: 50px 0;
 	text-align: center;
 	white-space: normal;
 	width: 70%;
 	word-spacing: 6px;
 }
-
 ::-webkit-input-placeholder {
 	color: gray;
 }
@@ -143,11 +167,37 @@ textarea:focus, input:focus{
 }
 
 .buttoncontainer {
-	margin: 1em auto;
+	margin: 2em auto;
 	width: 100%;
 }
 
-#checkguessbutton {
+.playthegamebutton {
+	background-color: antiquewhite;
+	border: none;
+	border-radius: 60px;
+	color: black;
+	display: block;
+	font-family: 'Quicksand', sans-serif;
+	font-size: 2.25em;
+	font-weight: bold;
+	letter-spacing: -2px;
+	margin: 0 auto;
+	padding: 30px 40px;
+	text-align: center;
+	white-space: normal;
+	word-spacing: 3px;
+	-moz-box-shadow:
+		3px 5px 2px rgba(128,128,128,0.7),
+		inset 0px 0px 3px rgba(255,255,255,1);
+	-webkit-box-shadow:
+		3px 5px 2px rgba(128,128,128,0.7),
+		inset 0px 0px 3px rgba(255,255,255,1);
+	box-shadow:
+		3px 5px 2px rgba(128,128,128,0.7),
+		inset 0px 0px 3px rgba(255,255,255,1);
+}
+
+.checkguessbutton {
 	background-color: antiquewhite;
 	border: none;
 	border-radius: 60px;
@@ -158,7 +208,7 @@ textarea:focus, input:focus{
 	font-weight: bold;
 	padding: 30px 40px;
 	letter-spacing: -2px;
-	margin: .5em auto;
+	margin: 0 auto;
 	text-align: center;
 	white-space: normal;
 	word-spacing: 3px;	
@@ -173,24 +223,23 @@ textarea:focus, input:focus{
 		inset 0px 0px 3px rgba(255,255,255,1);
 }
 
-#newgamebutton {
+.newgamebutton {
 	background-color: transparent;
 	border: none;
-	center: 0;
 	color: antiquewhite;
 	display: block;
 	font-family: 'Quicksand', sans-serif;
 	font-size: 1.75em;
 	font-weight: bold;
-	margin: 3em auto 0 auto;
-	padding: 40px 20px;
 	letter-spacing: -2px;
+	margin: 0 auto;
+	padding: 4em 0 2em 0;
 	text-align: center;
 	white-space: normal;
 	word-spacing: 3px;
 }
 
-#playthegamebutton {
+.playagainbutton {
 	background-color: antiquewhite;
 	border: none;
 	border-radius: 60px;
@@ -200,45 +249,7 @@ textarea:focus, input:focus{
 	font-size: 2.25em;
 	font-weight: bold;
 	letter-spacing: -2px;
-	margin: 3em auto 0 auto;
-	padding: 30px 40px;
-	text-align: center;
-	white-space: normal;
-	word-spacing: 3px;
-	-moz-box-shadow:
-		3px 5px 2px rgba(128,128,128,0.7),
-		inset 0px 0px 3px rgba(255,255,255,1);
-	-webkit-box-shadow:
-		3px 5px 2px rgba(128,128,128,0.7),
-		inset 0px 0px 3px rgba(255,255,255,1);
-	box-shadow:
-		3px 5px 2px rgba(128,128,128,0.7),
-		inset 0px 0px 3px rgba(255,255,255,1);
-}
-
-#winner { 
-	background-color: white;
-	color: black;
-	display: block;
-	margin: 2em auto 0 auto;
-	padding: 40px 0;
-	text-align: center;
-	white-space: normal;
-	width: 100%;
-	word-spacing: 6px;
-}
-
-#playagainbutton {
-	background-color: antiquewhite;
-	border: none;
-	border-radius: 60px;
-	color: black;
-	display: block;
-	font-family: 'Quicksand', sans-serif;
-	font-size: 2.25em;
-	font-weight: bold;
-	letter-spacing: -2px;
-	margin: 3.5em auto 0 auto;
+	margin: 0 auto;
 	padding: 30px 60px;
 	text-align: center;
 	white-space: normal;
